# go/api/swagger.yaml
@@ -356,6 +356,36 @@ paths:
           type: "string"
         collectionFormat: "multi"
         x-exportParamName: "ToPoint"
+      - name: "point_hint"
+        in: "query"
+        description: "Optional parameter. Specifies a hint for each `point` parameter\
+          \ to prefer a certain street for the closest location lookup. E.g. if there\
+          \ is an address or house with two or more neighboring streets you can control\
+          \ for which street the closest location is looked up."
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "multi"
+        x-exportParamName: "PointHint"
+      - name: "from_point_hint"
+        in: "query"
+        description: "For the from_point parameter. See point_hint"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "multi"
+        x-exportParamName: "FromPointHint"
+      - name: "to_point_hint"
+        in: "query"
+        description: "For the to_point parameter. See point_hint"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "multi"
+        x-exportParamName: "ToPointHint"
       - name: "out_array"
         in: "query"
         description: "Specifies which arrays should be included in the response. Specify\
@@ -370,36 +400,6 @@ paths:
           type: "string"
         collectionFormat: "multi"
         x-exportParamName: "OutArray"
-      - name: "point_hint"
-        in: "query"
-        description: "Optional parameter. Specifies a hint for each `point` parameter\
-          \ to prefer a certain street for the closest location lookup. E.g. if there\
-          \ is an address or house with two or more neighboring streets you can control\
-          \ for which street the closest location is looked up."
-        required: false
-        type: "array"
-        items:
-          type: "string"
-        collectionFormat: "multi"
-        x-exportParamName: "PointHint"
-      - name: "to_point_hint"
-        in: "query"
-        description: "For the to_point parameter. See point_hint"
-        required: false
-        type: "array"
-        items:
-          type: "string"
-        collectionFormat: "multi"
-        x-exportParamName: "ToPointHint"
-      - name: "from_point_hint"
-        in: "query"
-        description: "For the from_point parameter. See point_hint"
-        required: false
-        type: "array"
-        items:
-          type: "string"
-        collectionFormat: "multi"
-        x-exportParamName: "FromPointHint"
       - name: "vehicle"
         in: "query"
         description: "The vehicle for which the route should be calculated. Other\
@@ -721,16 +721,6 @@ definitions:
           items:
             type: "number"
             format: "double"
-      out_arrays:
-        type: "array"
-        description: "Specifies which arrays should be included in the response. Specify\
-          \ one or more of the following options 'weights', 'times', 'distances'.\
-          \ To specify more than one array use e.g. out_array=times&amp;out_array=distances.\
-          \ The units of the entries of distances are meters, of times are seconds\
-          \ and of weights is arbitrary and it can differ for different vehicles or\
-          \ versions of this API."
-        items:
-          type: "string"
       point_hints:
         type: "array"
         description: "Optional parameter. Specifies a hint for each point in the `points`\
@@ -747,6 +737,16 @@ definitions:
       to_point_hints:
         type: "array"
         description: "More information for the `to_points` array. See `point_hints`"
+        items:
+          type: "string"
+      out_arrays:
+        type: "array"
+        description: "Specifies which arrays should be included in the response. Specify\
+          \ one or more of the following options 'weights', 'times', 'distances'.\
+          \ To specify more than one array use e.g. out_array=times&amp;out_array=distances.\
+          \ The units of the entries of distances are meters, of times are seconds\
+          \ and of weights is arbitrary and it can differ for different vehicles or\
+          \ versions of this API."
         items:
           type: "string"
       vehicle:
