# swift/GraphHopper/Classes/Swaggers/APIs/MatrixAPI.swift
@@ -17,15 +17,15 @@ public class MatrixAPI: APIBase {
      - parameter point: (query) Specifiy multiple points for which the weight-, route-, time- or distance-matrix should be calculated. In this case the starts are identical to the destinations. If there are N points, then NxN entries will be calculated. The order of the point parameter is important. Specify at least three points. Cannot be used together with from_point or to_point. Is a string with the format latitude,longitude. (optional)
      - parameter fromPoint: (query) The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)
      - parameter toPoint: (query) The destination points for the routes. Is a string with the format latitude,longitude. (optional)
-     - parameter outArray: (query) Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)
      - parameter pointHint: (query) Optional parameter. Specifies a hint for each &#x60;point&#x60; parameter to prefer a certain street for the closest location lookup. E.g. if there is an address or house with two or more neighboring streets you can control for which street the closest location is looked up. (optional)
-     - parameter toPointHint: (query) For the to_point parameter. See point_hint (optional)
      - parameter fromPointHint: (query) For the from_point parameter. See point_hint (optional)
+     - parameter toPointHint: (query) For the to_point parameter. See point_hint (optional)
+     - parameter outArray: (query) Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)
      - parameter vehicle: (query) The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc (optional, default to car)
      - parameter completion: completion handler to receive the data and the error objects
      */
-    public class func matrixGet(key key: String, point: [String]? = nil, fromPoint: [String]? = nil, toPoint: [String]? = nil, outArray: [String]? = nil, pointHint: [String]? = nil, toPointHint: [String]? = nil, fromPointHint: [String]? = nil, vehicle: String? = nil, completion: ((data: MatrixResponse?, error: ErrorType?) -> Void)) {
-        matrixGetWithRequestBuilder(key: key, point: point, fromPoint: fromPoint, toPoint: toPoint, outArray: outArray, pointHint: pointHint, toPointHint: toPointHint, fromPointHint: fromPointHint, vehicle: vehicle).execute { (response, error) -> Void in
+    public class func matrixGet(key key: String, point: [String]? = nil, fromPoint: [String]? = nil, toPoint: [String]? = nil, pointHint: [String]? = nil, fromPointHint: [String]? = nil, toPointHint: [String]? = nil, outArray: [String]? = nil, vehicle: String? = nil, completion: ((data: MatrixResponse?, error: ErrorType?) -> Void)) {
+        matrixGetWithRequestBuilder(key: key, point: point, fromPoint: fromPoint, toPoint: toPoint, pointHint: pointHint, fromPointHint: fromPointHint, toPointHint: toPointHint, outArray: outArray, vehicle: vehicle).execute { (response, error) -> Void in
             completion(data: response?.body, error: error);
         }
     }
@@ -49,15 +49,15 @@ public class MatrixAPI: APIBase {
      - parameter point: (query) Specifiy multiple points for which the weight-, route-, time- or distance-matrix should be calculated. In this case the starts are identical to the destinations. If there are N points, then NxN entries will be calculated. The order of the point parameter is important. Specify at least three points. Cannot be used together with from_point or to_point. Is a string with the format latitude,longitude. (optional)
      - parameter fromPoint: (query) The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)
      - parameter toPoint: (query) The destination points for the routes. Is a string with the format latitude,longitude. (optional)
-     - parameter outArray: (query) Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)
      - parameter pointHint: (query) Optional parameter. Specifies a hint for each &#x60;point&#x60; parameter to prefer a certain street for the closest location lookup. E.g. if there is an address or house with two or more neighboring streets you can control for which street the closest location is looked up. (optional)
-     - parameter toPointHint: (query) For the to_point parameter. See point_hint (optional)
      - parameter fromPointHint: (query) For the from_point parameter. See point_hint (optional)
+     - parameter toPointHint: (query) For the to_point parameter. See point_hint (optional)
+     - parameter outArray: (query) Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)
      - parameter vehicle: (query) The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc (optional, default to car)
 
      - returns: RequestBuilder<MatrixResponse> 
      */
-    public class func matrixGetWithRequestBuilder(key key: String, point: [String]? = nil, fromPoint: [String]? = nil, toPoint: [String]? = nil, outArray: [String]? = nil, pointHint: [String]? = nil, toPointHint: [String]? = nil, fromPointHint: [String]? = nil, vehicle: String? = nil) -> RequestBuilder<MatrixResponse> {
+    public class func matrixGetWithRequestBuilder(key key: String, point: [String]? = nil, fromPoint: [String]? = nil, toPoint: [String]? = nil, pointHint: [String]? = nil, fromPointHint: [String]? = nil, toPointHint: [String]? = nil, outArray: [String]? = nil, vehicle: String? = nil) -> RequestBuilder<MatrixResponse> {
         let path = "/matrix"
         let URLString = GraphHopperAPI.basePath + path
 
@@ -65,10 +65,10 @@ public class MatrixAPI: APIBase {
             "point": point,
             "from_point": fromPoint,
             "to_point": toPoint,
-            "out_array": outArray,
             "point_hint": pointHint,
-            "to_point_hint": toPointHint,
             "from_point_hint": fromPointHint,
+            "to_point_hint": toPointHint,
+            "out_array": outArray,
             "vehicle": vehicle,
             "key": key
         ]
