# swift/GraphHopper/Classes/Swaggers/Models/MatrixRequest.swift
@@ -15,14 +15,14 @@ public class MatrixRequest: JSONEncodable {
     public var fromPoints: [[Double]]?
     /** The destination points for the routes. Is a string with the format longitude,latitude. */
     public var toPoints: [[Double]]?
-    /** Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. */
-    public var outArrays: [String]?
     /** Optional parameter. Specifies a hint for each point in the &#x60;points&#x60; array to prefer a certain street for the closest location lookup. E.g. if there is an address or house with two or more neighboring streets you can control for which street the closest location is looked up. */
     public var pointHints: [String]?
     /** More information for the &#x60;from_points&#x60; array. See &#x60;point_hints&#x60; */
     public var fromPointHints: [String]?
     /** More information for the &#x60;to_points&#x60; array. See &#x60;point_hints&#x60; */
     public var toPointHints: [String]?
+    /** Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. */
+    public var outArrays: [String]?
     /** The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. */
     public var vehicle: String?
 
@@ -34,10 +34,10 @@ public class MatrixRequest: JSONEncodable {
         nillableDictionary["points"] = self.points?.encodeToJSON()
         nillableDictionary["from_points"] = self.fromPoints?.encodeToJSON()
         nillableDictionary["to_points"] = self.toPoints?.encodeToJSON()
-        nillableDictionary["out_arrays"] = self.outArrays?.encodeToJSON()
         nillableDictionary["point_hints"] = self.pointHints?.encodeToJSON()
         nillableDictionary["from_point_hints"] = self.fromPointHints?.encodeToJSON()
         nillableDictionary["to_point_hints"] = self.toPointHints?.encodeToJSON()
+        nillableDictionary["out_arrays"] = self.outArrays?.encodeToJSON()
         nillableDictionary["vehicle"] = self.vehicle
         let dictionary: [String:AnyObject] = APIHelper.rejectNil(nillableDictionary) ?? [:]
         return dictionary
